# Eusouanderson

./: .gitignore  Dockerfile  README.md  app.py  gulpfile.js  index.html  index.jsx  package-lock.json  package.json  pyproject.toml  requirements.txt  sucesso.html
assets/css/: dorang.css  eusouanderson.css
assets/js/: eusouanderson.js
assets/vendors/bootstrap/: bootstrap.affix.js
cache/joblib/__main__-C%3A-Eusouanderson-app/start/: func_code.py
cache/joblib/__main__-C%3A-Eusouanderson-app/start/72a755383fba437e4dead6ff3e3d81e3/: metadata.json  output.pkl
js/: custom.js
static/assets/css/: eusouanderson.css
static/assets/js/: eusouanderson.js
templates/: icons.html  index.html  not_found.html
